🐛 4.5.1: Fix some openjdk compilation problems.